erDiagram

    USER {
        string id PK
        string email
        string company_name
        string password_hash
        datetime created_at
    }

    PROJECT {
        string id PK
        string user_id FK
        string name
        string description
        datetime created_at
    }

    API_KEY {
        string id PK
        string project_id FK
        string key
        string environment "dev | prod"
        datetime created_at
    }

    EVENT {
        string id PK
        string project_id FK
        string event_type "feature | subscription"
        string environment "dev | prod"
        json metadata
        datetime timestamp
    }

    USER ||--o{ PROJECT : owns
    PROJECT ||--o{ API_KEY : has
    PROJECT ||--o{ EVENT : receives
